--- a/graphql-springboot/pom.xml
+++ b/graphql-springboot/pom.xml
@@ -38,7 +38,11 @@
 			<artifactId>lombok</artifactId>
 			<version>1.18.4</version>
 		</dependency>
-
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+			<version>1.2.79</version>
+		</dependency>
 	</dependencies>
 
 	<build>
